responsiveness: fixed overlap issue

--- a/frontend/src/Home.css
+++ b/frontend/src/Home.css
@@ -90,7 +90,8 @@ footer .services{
 }
 
 footer .services .icons{
-    width: 75px;
+    width: 100%;
+    max-width: 75px;
 }
 
 footer .sitemap{
